# bairesdev_coding_challenge

./: .coveragerc  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_create_review_model.py  0002_change_rating_field_type.py  0003_change_company_field_type.py
basic_api/: settings.py  urls.py  wsgi.py
