[tool.poetry]
name = "bairesdev_coding_challenge"
version = "0.1.0"
description = ""
authors = ["M <m@mathsistor.com>"]

[tool.poetry.dependencies]
python = "*"
django = "^2.1"
djangorestframework = "^3.8"
djangorestframework-jwt = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^6.5"
pytest-django = "^3.3"
pytest-cov = "^2.5"
